# asteroids

./: README.md  asteroid.py  asteroidfield.py  circleshape.py  constants.py  main.py  player.py  pyproject.toml  shot.py
roids/: asteroid.py  asteroidfield.py  player.py  shot.py
