[tool.poetry]
name = "roids"
version = "0.1.0"
description = ""
authors = ["Brian Lee <briandl92391@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
